force-app/main/default/objects/LLC_BI__Fee__c/fields/Payee_Street__c.field-meta.xml
<CustomField>
    <fullName>Payee_Street__c</fullName>
    <label>Payee Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>