force-app/main/default/objects/LLC_BI__Fee__c/fields/Payee_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Payee_Zip_Code__c</fullName>
    <label>Payee Zip Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>