force-app/main/default/objects/LLC_BI__Fee__c/recordTypes/LLC_BI__Costs.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Costs</fullName>
    <active>true</active>
    <description>Record Type for Costs Page Layout</description>
    <label>Costs</label>
</RecordType>