force-app/main/default/objects/LLC_BI__Fee__c/validationRules/LLC_BI__Credit_Disclosure_Tolerances_Categories.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__Credit_Disclosure_Tolerances_Categories</fullName>
    <active>true</active>
    <description>User incorrectly populated TRID Disclosure Category and TRID Tolerances Category fields for the following fee types: the following fee types: Lender Credits, Seller Credits, Cost to Cure, Down Payment, Earnest Money/Deposit.</description>
    <errorConditionFormula>AND(
        LLC_BI__Loan__r.LLC_BI__Product_Reference__r.LLC_BI__Product_Feature__r.LLC_BI__Is_Subject_To_TRID_Tolerances__c, 
        OR(NOT(ISBLANK(TEXT(LLC_BI__TRID_Disclosure_Category__c))), NOT(ISBLANK(TEXT(LLC_BI__TRID_Tolerances_Category__c)))),
        OR(
            ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Lender Credit&apos;), ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Cost to Cure&apos;)
            , ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Seller Credit&apos;), ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Earnest Money/Deposit&apos;), ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Down Payment&apos;)
        )
    )</errorConditionFormula>
    <errorMessage>TRID Disclosure Category and TRID Tolerance Category are not required for the following fee types: Lender Credits, Seller Credits, Cost to Cure, Down Payment, Earnest Money/Deposit. To continue, remove any category values from these fee types.</errorMessage>
</ValidationRule>