force-app/main/default/objects/LLC_BI__Fee__c/validationRules/LLC_BI__Exclude_Seller_Paid_Fee_From_APR.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__Exclude_Seller_Paid_Fee_From_APR</fullName>
    <active>true</active>
    <description>Users cannot add seller-paid fees when Add to Finance Charge is selected.</description>
    <errorConditionFormula>ISPICKVAL(LLC_BI__Paid_By__c, &apos;Seller&apos;) &amp;&amp; LLC_BI__Add_To_Finance_Charge__c</errorConditionFormula>
    <errorMessage>A seller-paid fee cannot be added when Add to Finance Charge is selected. Deselect Add to Finance Charge.</errorMessage>
</ValidationRule>