force-app/main/default/objects/LLC_BI__Fee__c/validationRules/LLC_BI__Service_Shopped_For.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__Service_Shopped_For</fullName>
    <active>true</active>
    <description>User incorrectly populated Service Shopped For picklist.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(TEXT(LLC_BI__Service_Shopped_For__c))),  NOT(ISPICKVAL(LLC_BI__TRID_Disclosure_Category__c, &apos;Services You Can Shop For&apos;)))</errorConditionFormula>
    <errorMessage>The Service Shopped For picklist only applies to fees where the TRID Disclosure Category value is Services You Can Shop For.</errorMessage>
</ValidationRule>